@@ -78,6 +78,7 @@ class Command(Enum):
 
     SEND_FILE_INFO = "SEND_FILE_INFO"
     DELETE_FILE = "DELETE_FILE"
+    DELETE_DIRECTORY = "DELETE_DIRECTORY"
     DOWNLOAD_FILE = "DOWLOAD_FILE"
     CREATE_DIRECTORY = "CREATE_DIRECTORY"
     SEND_JOB_INFO = "SEND_JOB_INFO"
