@@ -1,4 +1,5 @@
 """Test for Printer object."""
+import os
 import queue
 import tempfile
 from typing import Any
@@ -53,6 +54,17 @@ tls=False
 
 def loop_exc_handler(exc):
     raise exc
+
+
+def remove_m_time(file_data):
+    """Remove 'm_time' key from file structure."""
+    for key in list(file_data):
+        if key == 'm_time':
+            del file_data[key]
+            continue
+        elif key == 'children':
+            for i in file_data['children']:
+                remove_m_time(i)
 
 
 @pytest.fixture()
@@ -216,6 +228,223 @@ class TestPrinter:
         assert info["event"] == "INFO"
         assert info["source"] == "CONNECT"
         assert info["command_id"] == 42
+
+    def test_call_delete_directory(self, requests_mock, printer):
+        tmp_dir = tempfile.TemporaryDirectory()
+        # mount
+        printer.mount(tmp_dir.name, "test")
+
+        # get mount for test purpose
+        mount = printer.inotify_handler.fs.mounts["test"]
+
+        # create temp dir in mount
+        path = os.path.join(tmp_dir.name, "test_dir")
+        os.makedirs(path)
+
+        # check file structure
+        file_system = mount.tree.to_dict()
+        remove_m_time(file_system)
+        assert file_system == {'type': 'DIR',
+                               'name': 'test',
+                               'ro': False}
+
+        # MEDIUM_INSERTED event resulting from mounting
+        requests_mock.post(SERVER + "/p/events", status_code=204)
+
+        requests_mock.post(SERVER + "/p/telemetry",
+                           text='{"command":"DELETE_DIRECTORY", "args": ["/test/test_dir"]}',
+                           headers={
+                               "Command-Id": "42",
+                               "Content-Type": "application/json"
+                           },
+                           status_code=200)
+        requests_mock.post(SERVER + "/p/events", status_code=204)
+
+        printer.telemetry(const.State.READY)
+
+        try:
+            func_timeout(0.1, printer.loop)
+        except FunctionTimedOut:
+            pass
+
+        assert printer.command.state == const.Event.ACCEPTED
+
+        assert str(requests_mock.request_history[2]) == \
+               f"POST {SERVER}/p/events"
+        info = requests_mock.request_history[2].json()
+        assert info["event"] == "FILE_CHANGED"
+        assert info["source"] == "WUI"
+
+        # check file structure
+        file_system = mount.tree.to_dict()
+        remove_m_time(file_system)
+        assert file_system == {
+            'type': 'DIR',
+            'name': 'test',
+            'ro': False,
+            'children': [{'name': 'test_dir',
+                          'ro': False, 'type': 'DIR'}]
+        }
+
+        printer.command()  # exec DELETE_DIRECTORY
+
+        try:
+            func_timeout(0.1, printer.loop)
+        except FunctionTimedOut:
+            pass
+
+        # check file structure
+        file_system = mount.tree.to_dict()
+        remove_m_time(file_system)
+        assert file_system == {'type': 'DIR',
+                               'name': 'test',
+                               'ro': False}
+        # directory is removed
+        assert os.path.exists(path) is False
+
+    def test_call_delete_file(self, requests_mock, printer):
+        tmp_dir = tempfile.TemporaryDirectory()
+        tmp_file = "test-file.hex"
+        # mount
+        printer.mount(tmp_dir.name, "test")
+
+        # get mount for test purpose
+        mount = printer.inotify_handler.fs.mounts["test"]
+
+        # create temp file in mount
+        file_path = os.path.join(tmp_dir.name, tmp_file)
+        with open(file_path, 'wb') as file_tmp:
+            file_tmp.write(os.urandom(1))
+
+        # check file structure
+        file_system = mount.tree.to_dict()
+        remove_m_time(file_system)
+        assert file_system == {'type': 'DIR',
+                               'name': 'test',
+                               'ro': False}
+
+        # MEDIUM_INSERTED event resulting from mounting
+        requests_mock.post(SERVER + "/p/events", status_code=204)
+
+        requests_mock.post(SERVER + "/p/telemetry",
+                           text='{"command":"DELETE_FILE","args": ["/test/test-file.hex"]}',
+                           headers={
+                               "Command-Id": "42",
+                               "Content-Type": "application/json"
+                           },
+                           status_code=200)
+        requests_mock.post(SERVER + "/p/events", status_code=204)
+
+        printer.telemetry(const.State.READY)
+
+        try:
+            func_timeout(0.1, printer.loop)
+        except FunctionTimedOut:
+            pass
+
+        assert str(requests_mock.request_history[2]) == \
+               f"POST {SERVER}/p/events"
+        info = requests_mock.request_history[2].json()
+        assert info["event"] == "FILE_CHANGED"
+        assert info["source"] == "WUI"
+
+        # check file structure
+        file_system = mount.tree.to_dict()
+        remove_m_time(file_system)
+        assert file_system == {
+            'type': 'DIR',
+            'name': 'test',
+            'ro': False,
+            'children': [{'name': 'test-file.hex',
+                          'ro': False,
+                          'size': 1,
+                          'type': 'FILE'}]
+        }
+
+        printer.command()  # exec DELETE_FILE
+
+        try:
+            func_timeout(0.1, printer.loop)
+        except FunctionTimedOut:
+            pass
+        # check file structure
+        file_system = mount.tree.to_dict()
+        remove_m_time(file_system)
+        assert file_system == {'type': 'DIR',
+                               'name': 'test',
+                               'ro': False}
+        assert os.path.exists(file_path) is False
+
+    def test_call_create_directory(self, requests_mock, printer):
+        tmp_dir = tempfile.TemporaryDirectory()
+        printer.mount(tmp_dir.name, "test")
+
+        # get mount for test purpose
+        mount = printer.inotify_handler.fs.mounts["test"]
+
+        # MEDIUM_INSERTED event resulting from mounting
+        requests_mock.post(SERVER + "/p/events", status_code=204)
+        dir_name = "test_dir"
+        path = os.path.join(tmp_dir.name, dir_name)
+
+        # check file structure
+        file_system = mount.tree.to_dict()
+        remove_m_time(file_system)
+        assert file_system == {'type': 'DIR',
+                               'name': 'test',
+                               'ro': False}
+
+        requests_mock.post(SERVER + "/p/telemetry",
+                           text='{"command":"CREATE_DIRECTORY", '
+                                f'"args": ["/test/test_dir"]}}',
+                           headers={
+                               "Command-Id": "42",
+                               "Content-Type": "application/json"
+                           },
+                           status_code=200)
+        requests_mock.post(SERVER + "/p/events", status_code=204)
+
+        printer.telemetry(const.State.READY)
+
+        try:
+            func_timeout(0.1, printer.loop)
+        except FunctionTimedOut:
+            pass
+
+        assert printer.command.state == const.Event.ACCEPTED
+
+        assert str(requests_mock.request_history[2]) == \
+               f"POST {SERVER}/p/events"
+        info = requests_mock.request_history[2].json()
+        assert info["event"] == "ACCEPTED"
+        assert info["source"] == "CONNECT"
+
+        # check file structure
+        file_system = mount.tree.to_dict()
+        remove_m_time(file_system)
+        assert file_system == {'type': 'DIR',
+                               'name': 'test',
+                               'ro': False}
+
+        printer.command()  # exec CREATE_DIRECTORY
+
+        try:
+            func_timeout(0.1, printer.loop)
+        except FunctionTimedOut:
+            pass
+
+        # check file structure
+        file_system = mount.tree.to_dict()
+        remove_m_time(file_system)
+        assert file_system == {
+            'type': 'DIR',
+            'name': 'test',
+            'ro': False,
+            'children': [{'name': 'test_dir',
+                          'ro': False,
+                          'type': 'DIR'}]
+        }
+        assert os.path.exists(path) is True
 
     def test_loop_no_server(self, requests_mock, printer):
         printer.server = None
