@@ -2,6 +2,8 @@ ChnageLog
 =========
 
 0.3.0.dev0
+    * fix update file structure
+    * add commands DELETE_FILE,DELETE_DIRECTORY,CREATE_DIRECTORY
 
 0.2.0 (2020-12-14)
 
